--- a/sonarqube-template.yaml
+++ b/sonarqube-template.yaml
@@ -146,6 +146,8 @@ objects:
     resources:
       requests:
         storage: ${SONAR_VOLUME_CAPACITY}
+    volumeName: sonarqube-data-pv
+    storageClassName: standard
 parameters:
 - displayName: SonarQube version
   value: "6.7"
